@@ -1,9 +1,13 @@
 2.0 - unreleased
 ================
 
+- Image transform is now plone.app.image aware. Fixes
+  http://dev.plone.org/old/plone/ticket/8506
+  [amleczko]
+  
 - help_criteria_field_name msgid was used twice but with different default
   messages. Fixed that.
-  [vincentfretin]
+  [vincentfretin]  
 
 - Made ATImage compute its ID from its title if provided. Closes
   http://dev.plone.org/old/plone/ticket/9186.
